--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "ng serve --proxy-config=proxy.conf.json",
         "build": "ng build --prod --source-map",
         "serve-static": "cd dist/ngsw-test && lite-server -c ../../config.js",
         "test": "ng test",
