--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -1,6 +1,29 @@
 {
     "index": "/index.html",
-    "assetGroups": [],
+    "assetGroups": [
+        {
+            "name": "app",
+            "installMode": "prefetch",
+            "resources": {
+                "files": [
+                    "/favicon.ico",
+                    "/index.html",
+                    "/*.css",
+                    "/*.js"
+                ]
+            }
+        },
+        {
+            "name": "assets",
+            "installMode": "lazy",
+            "updateMode": "prefetch",
+            "resources": {
+                "files": [
+                    "/assets/**"
+                ]
+            }
+        }
+    ],
     "dataGroups": [
         {
             "name": "api-unicorns-list",
